# Bytedevil

./: README
Apuntes C/: ejercicio  ejercicio1  ejercicio1.c~  ejercicio2  ejercicio2+  ejercicio2.c  ejercicio2.c.save
practica1_ejercicio1/: .anjuta_sym_db.db  Makefile.am  Makefile.in  configure  configure.ac  main.c  main.c~
practica1_ejercicio1/.anjuta/session/: anjuta.session  dock-layout.xml
practica1_ejercicio1/Debug/: Archivo nuevo 12  Makefile  config.h  config.status
practica1_ejercicio1/autom4te.cache/: output.1  requests  traces.0  traces.1
