## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = practica1_ejercicio1

practica1_ejercicio1_SOURCES = \
	main.c

practica1_ejercicio1_LDFLAGS = 

practica1_ejercicio1_LDADD = 

